unpackaged/main/default/objects/Contact/fields/Accepted_Current_Deals_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Current_Deals_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Current Deals Agreement</label>
    <type>Checkbox</type>
</CustomField>