unpackaged/main/default/objects/Contact/fields/Active_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0009237 - Migrate contact fields for EU ads</description>
    <label>Active Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Contacts</relationshipLabel>
    <relationshipName>Active_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>