unpackaged/main/default/objects/Contact/fields/Active_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Active_Community_User__c</fullName>
    <description>US-0011435 - Creation of seller communication records for coupons</description>
    <formula>Community_User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Contact has an active User access to the Seller Portal</inlineHelpText>
    <label>Active Community User</label>
    <type>Checkbox</type>
</CustomField>