unpackaged/main/default/objects/Contact/fields/Available_for_GCX__c.field-meta.xml
<CustomField>
    <fullName>Available_for_GCX__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[#EPH-6577] Count call attempts for GCX outreaches on Contact</description>
    <label>Available for GCX</label>
    <type>Checkbox</type>
</CustomField>