unpackaged/main/default/objects/Contact/fields/Available_for_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Marketing__c</fullName>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <formula>IF(  Marketing_Blacklist__c ||  EBH_DoNotContact__c  ||  EBH_EmailOut__c, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact is not available for marketing communications if it is &quot;Marketing Blacklist&quot; or &quot;Do Not Contact&quot; OR &quot;Email Opt Out&quot;</inlineHelpText>
    <label>Available for Email Marketing</label>
    <type>Checkbox</type>
</CustomField>