unpackaged/main/default/objects/Contact/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <formula>Active_Account__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name</label>
    <type>Text</type>
</CustomField>