unpackaged/main/default/objects/Contact/fields/ClonedSource__c.field-meta.xml
<CustomField>
    <fullName>ClonedSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011343 - Adding User to Existing Seller Portal Group. set by trigger at clone event.</description>
    <label>ClonedSource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>