unpackaged/main/default/objects/Contact/fields/Contact_Data_Quality__c.field-meta.xml
<CustomField>
    <fullName>Contact_Data_Quality__c</fullName>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <formula>IF( Email_Bounced__c  ||  Incorrect_Phone_Number__c , &#39;Red&#39;, &#39;Green&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If contact has invalid email or invalid phonenumber then red else green</inlineHelpText>
    <label>Contact Data Quality</label>
    <type>Text</type>
</CustomField>