unpackaged/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>US-0008785 - [NA] Resend Deal Statements to Seller</description>
    <inlineHelpText>Flag contacts in roles for specific communications</inlineHelpText>
    <label>Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising NA</fullName>
            </value>
            <value>
                <fullName>B2C Scaling</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>eBay - Active</fullName>
            </value>
            <value>
                <fullName>eBay - Integrations</fullName>
            </value>
            <value>
                <fullName>eBay - Inventory and Pricing</fullName>
            </value>
            <value>
                <fullName>eBay - Marketing</fullName>
            </value>
            <value>
                <fullName>eBay - Non Active - Left Company</fullName>
            </value>
            <value>
                <fullName>eBay - Non Active - Moved Dept/Project</fullName>
            </value>
            <value>
                <fullName>eBay - Non Active - Retired</fullName>
            </value>
            <value>
                <fullName>eBay - Primary Contact</fullName>
            </value>
            <value>
                <fullName>eBay - Secondary Contact</fullName>
            </value>
            <value>
                <fullName>Marketplaces – Executive Contact</fullName>
            </value>
            <value>
                <fullName>Marketplaces – Financial Contact</fullName>
            </value>
            <value>
                <fullName>Primary/MC Contact</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
            </value>
            <value>
                <fullName>Sales Contact</fullName>
            </value>
            <value>
                <fullName>Support Contact</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>Training Contact</fullName>
            </value>
            <value>
                <fullName>C-Suite</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Deals</fullName>
                <label>NA Deals Contracts</label>
            </value>
            <value>
                <fullName>NA Deals Statement Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>