unpackaged/main/default/objects/Contact/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008996 - create this new field for using in Contract Action only &quot;New_Legal_Entity_Contact&quot;</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>