unpackaged/main/default/objects/Contact/fields/Days_since_Quality_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Quality_Change__c</fullName>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <formula>TODAY()  -  DATEVALUE(Last_Quality_Change__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since the last change of field &quot;Last Quality Change&quot;</inlineHelpText>
    <label>Days since Quality Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>