unpackaged/main/default/objects/Contact/fields/EBH_ActualStandard__c.field-meta.xml
<CustomField>
    <fullName>EBH_ActualStandard__c</fullName>
    <formula>TEXT(Account.EBH_ActualStandard__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Standard</label>
    <type>Text</type>
</CustomField>