unpackaged/main/default/objects/Contact/fields/EBH_Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>EBH_Areas_of_Interest__c</fullName>
    <inlineHelpText>Contacts preferred content s/he likes to be informed on. This will be used in marketing cloud to target the contact with relevant content.</inlineHelpText>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eBay shop updates</fullName>
            </value>
            <value>
                <fullName>eBay selling basics</fullName>
            </value>
            <value>
                <fullName>Shipping, Handling &amp; Returns</fullName>
            </value>
            <value>
                <fullName>Product, Policy and Compliance Updates</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Promotion Tools</fullName>
            </value>
            <value>
                <fullName>Inventory Guidance</fullName>
            </value>
            <value>
                <fullName>Listing &amp; Fullfilment Optimization</fullName>
            </value>
            <value>
                <fullName>Selling Promotions</fullName>
            </value>
            <value>
                <fullName>Cross Border Trade</fullName>
            </value>
            <value>
                <fullName>Webinar &amp; Video Guidance</fullName>
            </value>
            <value>
                <fullName>Seller Events</fullName>
            </value>
            <value>
                <fullName>All of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>