unpackaged/main/default/objects/Contact/fields/EBH_CntctTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>EBH_CntctTypeDesc__c</fullName>
    <description>(EPH-5263) Synch contact-type and role from DW into Hive - ETL</description>
    <inlineHelpText>This value comes from the B2C registration on ebay site and can have the following picklist values: 
- General Manager
- Billing Contact
- Business Seller Contact
- Customer Support Contact
- Blank (if no value provided during Business Registration)</inlineHelpText>
    <label>Contact Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Seller Contact</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Customer Support Contact</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>