unpackaged/main/default/objects/Contact/fields/EBH_ContactPreference__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContactPreference__c</fullName>
    <description>[EBH] (US-0036) : Contact Preference</description>
    <inlineHelpText>Contact&#39;s preferred channel</inlineHelpText>
    <label>Contact Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Landline Phone</label>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Message Center (Email)</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>DELETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>