unpackaged/main/default/objects/Contact/fields/EBH_DataOrigin__c.field-meta.xml
<CustomField>
    <fullName>EBH_DataOrigin__c</fullName>
    <description>[EBH] (EPH-2357) : Data Origin</description>
    <label>Data Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>