unpackaged/main/default/objects/Contact/fields/EBH_Decision_Maker_Role__c.field-meta.xml
<CustomField>
    <fullName>EBH_Decision_Maker_Role__c</fullName>
    <inlineHelpText>Areas where contact has authority to decide on</inlineHelpText>
    <label>Decision Maker Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Strategy and Development</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Claims, Disputes and Case Management</fullName>
            </value>
            <value>
                <fullName>Coupons</fullName>
            </value>
            <value>
                <fullName>Order Processing &amp; Shipping</fullName>
            </value>
            <value>
                <fullName>Product and Listing Management</fullName>
            </value>
            <value>
                <fullName>Warehouse and Stock Management</fullName>
            </value>
            <value>
                <fullName>Returns Management</fullName>
            </value>
            <value>
                <fullName>Marketing / Promotions</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Accounting / Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Market and Performance Data Analysis</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Sole Trader (All of the above)</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Final Value Fee</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Customer Service Claims</fullName>
            </value>
            <value>
                <fullName>Data Analysis</fullName>
            </value>
            <value>
                <fullName>Disputes and Case Management</fullName>
            </value>
            <value>
                <fullName>Market and Performance</fullName>
            </value>
            <value>
                <fullName>Seller Council</fullName>
            </value>
            <value>
                <fullName>Opt-in Programs</fullName>
            </value>
            <value>
                <fullName>Opt-in Growth</fullName>
            </value>
            <value>
                <fullName>Opt-in Events</fullName>
            </value>
            <value>
                <fullName>Opt-in News</fullName>
            </value>
            <value>
                <fullName>Pro-Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>