unpackaged/main/default/objects/Contact/fields/EBH_DoNotContact__c.field-meta.xml
<CustomField>
    <fullName>EBH_DoNotContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-5775) - to enable/disable do not contact</description>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>