unpackaged/main/default/objects/Contact/fields/EBH_Email_Unsubscribe_Reason__c.field-meta.xml
<CustomField>
    <fullName>EBH_Email_Unsubscribe_Reason__c</fullName>
    <inlineHelpText>Email unsubscribe reason</inlineHelpText>
    <label>Email Unsubscribe Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I receive too many emails from eBay</fullName>
            </value>
            <value>
                <fullName>The content is not relevant to me</fullName>
            </value>
            <value>
                <fullName>I would like to be contacted via a different communication channel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>