unpackaged/main/default/objects/Contact/fields/EBH_EmailOut__c.field-meta.xml
<CustomField>
    <fullName>EBH_EmailOut__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (US-0036) : Email Opt Out</description>
    <inlineHelpText>Wants to be contacted by email (Y/N)</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>