unpackaged/main/default/objects/Contact/fields/EBH_GDPRRemoved__c.field-meta.xml
<CustomField>
    <fullName>EBH_GDPRRemoved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-5413) to track if contact has been GDPR removed</description>
    <label>GDPR Removed</label>
    <type>Checkbox</type>
</CustomField>