unpackaged/main/default/objects/Contact/fields/EBH_GMV_12_months__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMV_12_months__c</fullName>
    <formula>Account.EBH_GMVLast12Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMV (12 months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>