unpackaged/main/default/objects/Contact/fields/EBH_MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>EBH_MailingAddress__c</fullName>
    <description>[EBH] (US:0036) - Mailing Address</description>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>