unpackaged/main/default/objects/Contact/fields/EBH_MailingCity__c.field-meta.xml
<CustomField>
    <fullName>EBH_MailingCity__c</fullName>
    <description>[EBH] (US:0036) - to capture mailing address fields without length restriction for ETL</description>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>