unpackaged/main/default/objects/Contact/fields/EBH_MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>EBH_MailingCountry__c</fullName>
    <description>[EBH] (US-0036) : Mailing Country</description>
    <label>Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>