unpackaged/main/default/objects/Contact/fields/EBH_MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_MailingPostalCode__c</fullName>
    <description>[EBH] (US-0036) : Mailing Postal Code</description>
    <label>Mailing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>