unpackaged/main/default/objects/Contact/fields/EBH_MailingState__c.field-meta.xml
<CustomField>
    <fullName>EBH_MailingState__c</fullName>
    <description>[EBH] (US-0036) : Mailing State</description>
    <label>Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>