unpackaged/main/default/objects/Contact/fields/EBH_MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>EBH_MailingStreet__c</fullName>
    <description>[EBH] (US-0036) : To capture the Mailing address without length restrictions for ETL</description>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>