unpackaged/main/default/objects/Contact/fields/EBH_MarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>EBH_MarketingOptIn__c</fullName>
    <description>[EBH] (EPH-5625) to calculate number of contacts with Marketing Opt-In on Seller</description>
    <formula>If ( Available_for_Marketing__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Opt-In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>