unpackaged/main/default/objects/Contact/fields/EBH_NightPhone__c.field-meta.xml
<CustomField>
    <fullName>EBH_NightPhone__c</fullName>
    <description>[EBH] (EPH-2201) : Night Phone</description>
    <label>Night Phone</label>
    <type>Phone</type>
</CustomField>