unpackaged/main/default/objects/Contact/fields/EBH_OracleId__c.field-meta.xml
<CustomField>
    <fullName>EBH_OracleId__c</fullName>
    <description>[EBH] (EPH-52) : Oracle ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Oracle ID</inlineHelpText>
    <label>Oracle Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>