unpackaged/main/default/objects/Contact/fields/EBH_OtherAddress__c.field-meta.xml
<CustomField>
    <fullName>EBH_OtherAddress__c</fullName>
    <description>[EBH] (US-0036) : Other Address</description>
    <label>Other Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>