unpackaged/main/default/objects/Contact/fields/EBH_OtherCity__c.field-meta.xml
<CustomField>
    <fullName>EBH_OtherCity__c</fullName>
    <description>[EBH] (US-0036) : Other City</description>
    <label>Other City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>