unpackaged/main/default/objects/Contact/fields/EBH_OtherCountry__c.field-meta.xml
<CustomField>
    <fullName>EBH_OtherCountry__c</fullName>
    <description>[EBH] (US-0036) : Other Country</description>
    <label>Other Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>