unpackaged/main/default/objects/Contact/fields/EBH_OtherPostalCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_OtherPostalCode__c</fullName>
    <description>[EBH] (US-0036) : Other Postal Code</description>
    <label>Other Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>