unpackaged/main/default/objects/Contact/fields/EBH_OtherState__c.field-meta.xml
<CustomField>
    <fullName>EBH_OtherState__c</fullName>
    <description>[EBH] (US-0036) : Other State</description>
    <label>Other State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>