unpackaged/main/default/objects/Contact/fields/EBH_OtherStreet__c.field-meta.xml
<CustomField>
    <fullName>EBH_OtherStreet__c</fullName>
    <description>[EBH] (US-0036) : Other Street</description>
    <label>Other Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>