unpackaged/main/default/objects/Contact/fields/EBH_PhoneOptOut__c.field-meta.xml
<CustomField>
    <fullName>EBH_PhoneOptOut__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (US-0036) : Phone Opt Out</description>
    <inlineHelpText>Wants to be contacted by phone (Y/N)</inlineHelpText>
    <label>Phone Opt Out</label>
    <type>Checkbox</type>
</CustomField>