unpackaged/main/default/objects/Contact/fields/EBH_PostOptOut__c.field-meta.xml
<CustomField>
    <fullName>EBH_PostOptOut__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (US-0036) : Post Opt Out</description>
    <inlineHelpText>Wants to be contacted by post  (direct mail) (Y/N)</inlineHelpText>
    <label>Post Opt Out</label>
    <type>Checkbox</type>
</CustomField>