unpackaged/main/default/objects/Contact/fields/EBH_Preferred_Frequency__c.field-meta.xml
<CustomField>
    <fullName>EBH_Preferred_Frequency__c</fullName>
    <inlineHelpText>Indicates how often the contact wants to be informed with marketing content</inlineHelpText>
    <label>Preferred Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>