unpackaged/main/default/objects/Contact/fields/EBH_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>EBH_Preferred_Language__c</fullName>
    <inlineHelpText>Preferred contact language, this will be used to display content using the relevant language</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENGLISH</fullName>
            </value>
            <value>
                <fullName>GERMAN</fullName>
            </value>
            <value>
                <fullName>FRENCH</fullName>
            </value>
            <value>
                <fullName>ITALIAN</fullName>
            </value>
            <value>
                <fullName>SPANISH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>