unpackaged/main/default/objects/Contact/fields/EBH_SecondaryEmail__c.field-meta.xml
<CustomField>
    <fullName>EBH_SecondaryEmail__c</fullName>
    <description>[EBH] (US-0048) : Secondary Email</description>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>