unpackaged/main/default/objects/Contact/fields/EBH_Segment__c.field-meta.xml
<CustomField>
    <fullName>EBH_Segment__c</fullName>
    <description>Related Seller</description>
    <formula>TEXT(Account.EBH_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>