unpackaged/main/default/objects/Contact/fields/EBH_Serial__c.field-meta.xml
<CustomField>
    <fullName>EBH_Serial__c</fullName>
    <description>[EBH] (EPH-21) : Hidden serial # for custom pagination</description>
    <displayFormat>{0000000000}</displayFormat>
    <label>Serial #</label>
    <type>AutoNumber</type>
</CustomField>