unpackaged/main/default/objects/Contact/fields/EBH_SerialF__c.field-meta.xml
<CustomField>
    <fullName>EBH_SerialF__c</fullName>
    <description>[EBH] (EPH-21) : Hidden serial # for custom pagination</description>
    <formula>Value(EBH_Serial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>