unpackaged/main/default/objects/Contact/fields/EBH_Status__c.field-meta.xml
<CustomField>
    <fullName>EBH_Status__c</fullName>
    <description>[EBH] (EPH-3293) - to track the status of the contact</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Pending Termination</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>