unpackaged/main/default/objects/Contact/fields/Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <inlineHelpText>Invalid primary email</inlineHelpText>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>