unpackaged/main/default/objects/Contact/fields/Email_Likelihood_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Likelihood_Score__c</fullName>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <inlineHelpText>Likelihood (0-1) of the contact opening the email. 99 indicates insufficient data for prediction. Blank indicates no data for prediction</inlineHelpText>
    <label>Email Likelihood Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>