unpackaged/main/default/objects/Contact/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>US-0009237 - Migrate contact fields for EU ads</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>