unpackaged/main/default/objects/Contact/fields/ignoreDuplicates__c.field-meta.xml
<CustomField>
    <fullName>ignoreDuplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0011636 - SPIKE - Duplicate Management Contacts</description>
    <label>ignoreDuplicates</label>
    <type>Checkbox</type>
</CustomField>