unpackaged/main/default/objects/Contact/fields/Incorrect_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Phone_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <inlineHelpText>Invalid primary phonenumber</inlineHelpText>
    <label>Incorrect Phone Number</label>
    <type>Checkbox</type>
</CustomField>