unpackaged/main/default/objects/Contact/fields/Last_email_change__c.field-meta.xml
<CustomField>
    <fullName>Last_email_change__c</fullName>
    <description>EPH-6520 New Metrics for Contact Data in Contact Records - HIVE</description>
    <inlineHelpText>Last time the primary email adress has been updated. If there is no value it means it has never been updated</inlineHelpText>
    <label>Last email change</label>
    <type>Date</type>
</CustomField>