unpackaged/main/default/objects/Contact/fields/Last_phone_number_change__c.field-meta.xml
<CustomField>
    <fullName>Last_phone_number_change__c</fullName>
    <description>EPH-6520 New Metrics for Contact Data in Contact Records - HIVE</description>
    <inlineHelpText>Last time the primary phone number has been updated. If there is no value it means it has never been updated</inlineHelpText>
    <label>Last phone number change</label>
    <type>Date</type>
</CustomField>