unpackaged/main/default/objects/Contact/fields/Last_Quality_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Quality_Change__c</fullName>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <inlineHelpText>Last time the status of the Contact Data Quality changed. Either from red to green or green to red.</inlineHelpText>
    <label>Last Quality Change</label>
    <type>DateTime</type>
</CustomField>