unpackaged/main/default/objects/Contact/fields/Marketing_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Blacklist__c</fullName>
    <description>EPH-5629 Contact - Quality &amp; Preference
US-0008638 - Seller 360: Rename &quot;Blacklist&quot; to &quot;Blocklist&quot;</description>
    <formula>IF( Account.Marketing_Blacklist__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indication that the seller has been blocklisted and will not receive any marketing communication for any of it&#39;s contacts.</inlineHelpText>
    <label>Marketing Blocklist</label>
    <type>Checkbox</type>
</CustomField>