unpackaged/main/default/objects/Contact/fields/No_Marketing_Tracking__c.field-meta.xml
<CustomField>
    <fullName>No_Marketing_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <inlineHelpText>Contact´s right of not being tracked in marketing (GDPR Requirement). If requested than contact will not be tracked in marketing.</inlineHelpText>
    <label>No Marketing Tracking</label>
    <type>Checkbox</type>
</CustomField>