unpackaged/main/default/objects/Contact/fields/Original_Seller__c.field-meta.xml
<CustomField>
    <fullName>Original_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011343 - Adding User to Existing Seller Portal Group</description>
    <label>Original Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Original Seller)</relationshipLabel>
    <relationshipName>Portal_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>