unpackaged/main/default/objects/Contact/fields/Owner_status__c.field-meta.xml
<CustomField>
    <fullName>Owner_status__c</fullName>
    <description>Owner of the Contact is active or inactive, US-0009237 - Migrate contact fields for EU ads</description>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner status</label>
    <type>Checkbox</type>
</CustomField>