unpackaged/main/default/objects/Contact/fields/Phone_Likelihood_Score_contact_level__c.field-meta.xml
<CustomField>
    <fullName>Phone_Likelihood_Score_contact_level__c</fullName>
    <description>EPH-6705 Channel Likelihood on Contact Level</description>
    <inlineHelpText>Likelihood (0-1) of the contact being reached by phone.
99 indicates insufficient data for prediction.
Blank indicates no data for prediction</inlineHelpText>
    <label>Phone Likelihood Score (contact level)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>